	* HilbertArray.tensor
	* HilbertArray.is_positive
	* HilbertArray.eigvalsh
	* HilbertArray.eigproj
	* HilbertSpace.random_povm_element
	* experimental: non-commutative graphs
	* fixes for the way TensorSubspace deals with dtype, etc.
	* CP_Map.krauses
	* Superoperator.H and CP_Map.H to create adjoint channel
	* TensorSubspace multiplication and H
	* better use of NotImplemented for array ops

=== qitensor-0.11 (Dan Stahlke, 2013-05-11) ===
	* superoperators module
	* sympy support
	* added PNG renderers, for qtconsole (still need to find a way to
	  detect qtconsole)
	* HilbertArray.inv() method, which allows taking inverse of cross operator
	* HilbertArray.trace_norm()
	* HilbertArray.schatten_norm()
	* HilbertArray.mutual_info()
	* HilbertArray.relative_entropy()
	* HilbertArray.norm() takes p argument
	* HilbertArray.tracekeep()
	* HilbertArray.conj_by()
	* HilbertSpace.fully_mixed()
	* HilbertSpace.hermitian_basis has tracefree option
	* circuits.controlled_U
	* circuits.toffoli
	* circuits.fredkin

=== qitensor-0.10 (Dan Stahlke, 2012-10-27) ===
	* can run doctests via 'setup.py test'
	* HilbertSpace.fourier()
	* HilbertSpace.hadamard() for any space of dimension a power of 2
	* HilbertSpace.haar_matrix()
	* HilbertSpace.random_density()
	* HilbertSpace.index_iter_dict()
	* HilbertArray.diag()
	* HilbertArray.measure()
	* HilbertArray.logm()
	* circuits.swap()
	* remove deprecated 'q' param for expm
	* allow pauliX without arg for cyclic groups
	* circuits functions handle non-qubit case
	* 'group' module

=== qitensor-0.9 (Dan Stahlke, 2011-04-17) ===
	* random_isometry
	* doctest fixes for sage
	* can pass HilbertBaseField for dtype
	* array formatting fixes/improvements
	* API CHANGE: random_array uses normal distribution
	* random_unitary is uniform w.r.t. Haar measure
	* much better HilbertArray.relabel method
	* HilbertArray.trace between arbitrary spaces
	* HilbertArray.sqrt
	* HilbertArray.purity
	* TensorSubspace module
	* direct_sum for HilbertAtom